--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -11,7 +11,7 @@
     "import datetime\n",
     "from collections import defaultdict\n",
     "import pickle\n",
-    "import multiprocessing as mp"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "def process_book_info(user_id, rating, review):\n",
-    "    return  {\"user_id\":book_id, \"rating\": rating, \"review\": review}"
+    "    return  {\"user_id\":user_id, \"rating\": rating, \"review\": review}"
    ]
   },
   {
@@ -52,10 +52,33 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-5-86fb853cc38d>:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  for idx, line in enumerate(tqdm(f)):\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "902837dec82047b78f80f2d30180249f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1378032\r"
+      "\n"
      ]
     }
    ],
@@ -65,12 +88,11 @@
     "user_info = defaultdict(list)\n",
     "book_info = defaultdict(list)\n",
     "with open(\"./goodreads_reviews_spoiler_raw.json\", \"r\") as f:\n",
-    "    for idx, line in enumerate(f):\n",
-    "        print(idx, end='\\r')\n",
+    "    for idx, line in enumerate(tqdm(f)):\n",
     "        d = json.loads(line)\n",
     "        user_id = d['user_id']\n",
     "        book_id = d['book_id']\n",
-    "        time = d['read_at']\n",
+    "        time = process_time(d['date_updated'])\n",
     "        rating = d['rating']\n",
     "        review = re.sub(\"\\(view spoiler\\)\\[|\\(hide spoiler\\)\\]| \\n\", \"\", d['review_text'])\n",
     "        user_lst.add(user_id)\n",
